client feedback changes

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -295,7 +295,7 @@
               [routerLinkActiveOptions]="{exact:true}" class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>
-               Ticket Created Dump Reports
+               Ticket Created Reports
               </p>
             </a>
           </li>
@@ -304,7 +304,7 @@
               [routerLinkActiveOptions]="{exact:true}" class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>
-               FCR Dump Reports
+               FCR Reports
               </p>
             </a>
           </li>
@@ -389,20 +389,20 @@
               </p>
             </a>
           </li>
-          <li *hasClaim="'REP_INTERCATION_REPPORT'" class="nav-item">
+          <!-- <li *hasClaim="'REP_INTERCATION_REPPORT'" class="nav-item">
             <a [routerLink]="['/interaction-report/survey-reports']" routerLinkActive="active"
               [routerLinkActiveOptions]="{exact:true}" class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>Survey Reports</p>
             </a>
-          </li>
-          <li *hasClaim="'REP_INTERCATION_REPPORT'" class="nav-item">
+          </li> -->
+          <!-- <li *hasClaim="'REP_INTERCATION_REPPORT'" class="nav-item">
             <a [routerLink]="['/interaction-report/grp-tat-reports']" routerLinkActive="active"
               [routerLinkActiveOptions]="{exact:true}" class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>GRP TAT Reports</p>
             </a>
-          </li>
+          </li> -->
         </ul>
         <li id="ProductHeading" aria-expanded="true" aria-controls="collapseOne" data-toggle="collapse"
           data-target="#ProductCategory" class="collapsed"
