--- a/src/app/customer/customer-detail/customer-detail.component.html
+++ b/src/app/customer/customer-detail/customer-detail.component.html
@@ -95,7 +95,7 @@
                     <div class="form-group">
                         <mat-label>{{'EMAIL' | translate}} *</mat-label>
                         <div class="email-div">
-                            <input (change)="onEmailChange($event)" formControlName="emailId" class="form-control"
+                            <input formControlName="emailId" class="form-control"
                                 type="text">
                             <i class="fas fa-search" (click)="onEmailSearch($event)"  ></i>
                         </div>
