--- a/src/app/email-inbox/email-inbox-detail/email-inbox-detail.component.html
+++ b/src/app/email-inbox/email-inbox-detail/email-inbox-detail.component.html
@@ -112,6 +112,7 @@
             <div class="text-danger" *ngIf="emailForm.get('body').errors?.required">
               {{'BODY_IS_REQUIRED' | translate }}
             </div>
+            <div class="text-danger" *ngIf="emailForm.get('body').errors?.pattern">Special characters not allowed</div>
           </div>
         </div>
       </div>
