--- a/src/app/interaction-reports/dump-report-fcr/dump-report-fcr.component.html
+++ b/src/app/interaction-reports/dump-report-fcr/dump-report-fcr.component.html
@@ -65,14 +65,19 @@
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction ID</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.interactionId}} </td>
             </ng-container>
+            <ng-container matColumnDef="createdDate">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.createdDate| date:'yyyy-MM-dd hh:mm a'}}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="createdBy">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created By</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.createdByName }} </td>
+            </ng-container>
             <ng-container matColumnDef="ticketType">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Type</th>
                 <td class="table-column-200" [ngClass]="row?.ticketType=='FCR'?'fcr':'ticket-closed'" mat-cell
                     *matCellDef="let row"> {{row.ticketType}} </td>
-            </ng-container>
-            <ng-container matColumnDef="assignedTo">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Assign To</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.assignToName || row?.assignedTo}} </td>
             </ng-container>
             <ng-container matColumnDef="contactName">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Contact Name</th>
@@ -84,9 +89,7 @@
                 <td class="table-column-100" mat-cell *matCellDef="let row"> {{row?.team || row?.teamName}} </td>
             </ng-container>
             <ng-container matColumnDef="interactionState">
-                <th class="table-column-150" mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Status
-                </th>
+                    <th class="table-column-150" mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
                 <td class="table-column-150"
                     [ngClass]="row?.interactionState=='CLOSED'?'closed':(row?.interactionState=='OPEN'||row?.interactionState=='Open'?'open':row?.interactionState=='PENDING'?'pending':'resolved')"
                     mat-cell *matCellDef="let row"> <span class="text-uppercase">{{row?.interactionState}}</span></td>
@@ -107,9 +110,19 @@
                 <td class="table-column-350" mat-cell *matCellDef="let row"> {{row?.subDisposition||row.subcategoryName}}
                 </td>
             </ng-container>
+            <ng-container matColumnDef="subject">
+                <th class="table-column-450" mat-header-cell *matHeaderCellDef mat-sort-header>Subject</th>
+                <td class="table-column-450" mat-cell *matCellDef="let row"> {{row.subject}}
+                </td>
+            </ng-container>
             <ng-container matColumnDef="problemReported">
                 <th class="table-column-400" mat-header-cell *matHeaderCellDef mat-sort-header> Problem Reported</th>
                 <td class="table-column-400" mat-cell *matCellDef="let row"> {{row?.problemReported}}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="agentRemarks">
+                <th class="table-column-400" mat-header-cell *matHeaderCellDef mat-sort-header>Agent Remarks</th>
+                <td class="table-column-400" mat-cell *matCellDef="let row"> {{row?.agentRemarks}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="docketNumber">
@@ -117,88 +130,28 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.docketNumber}}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="uniqueNumber">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header> Unique Number</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.uniqueNumber}}
+            <ng-container matColumnDef="mobile">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile No.</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.mobileNo || '--'}}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="emailId">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>EmailId</th>
+            <!-- <ng-container matColumnDef="emailId">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Email Id</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.emailId}}
                 </td>
-            </ng-container>
-            <ng-container matColumnDef="escalationStartDateTime">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Escalation Start Date Time</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.escalationStartDateTime | date:'yyyy-MM-dd hh:mm:ss aa'}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="gstn">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>GSTN</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.gstn}}
-                </td>
+            </ng-container> -->
+            <ng-container matColumnDef="closeDate">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Close Date</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.lastResolvedAt |date:'yyyy/MM/dd hh:MM :a' }}</td>
             </ng-container>
             <ng-container matColumnDef="interactionCreatedThroughMedia">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Created Through Media</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.interactionCreatedThroughMedia}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="interactionThreadLastUpdated">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Thread Last Updated</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.interactionThreadLastUpdated}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="lastResolvedAt">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Last Resolved At</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.lastResolvedAt}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="currentStatus">
-                <th class="table-column-300" mat-header-cell *matHeaderCellDef mat-sort-header>Current Status</th>
-                <td class="table-column-300" mat-cell *matCellDef="let row"> {{row.currentStatus}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="noOfMessages">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>No Of Messages</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.noOfMessages}}
+                <th class="table-column-350" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Created Through Media</th>
+                <td class="table-column-350" mat-cell *matCellDef="let row"> {{row.interactionCreatedThroughMedia}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="priorityName">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Priority Name</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.priorityName}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="reopenFlag">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Reopen Flag</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.reopenFlag}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="ticketAssignedTime">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Ticket Assigned Time</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.ticketAssignedTime | date:'yyyy-MM-dd'}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="subject">
-                <th class="table-column-450" mat-header-cell *matHeaderCellDef mat-sort-header>Subject</th>
-                <td class="table-column-450" mat-cell *matCellDef="let row"> {{row.subject}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="createdDate">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.createdDate| date:'yyyy-MM-dd hh:mm a'}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="problemId">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Problem Id</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemId || row?.problemID}} </td>
-            </ng-container>
-            <ng-container matColumnDef="agentRemarks">
-                <th class="table-column-400" mat-header-cell *matHeaderCellDef mat-sort-header>Agent Remarks</th>
-                <td class="table-column-400" mat-cell *matCellDef="let row"> {{row?.agentRemarks}}
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="mobile">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile No.</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.mobileNo || '--'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
