--- a/src/app/inventory/add-note-dialog/add-note-dialog.component.html
+++ b/src/app/inventory/add-note-dialog/add-note-dialog.component.html
@@ -24,6 +24,7 @@
                         <div class="text-danger" *ngIf="notesForm.get('body').errors?.required">
                             Comment is required
                         </div>
+                        <div class="text-danger" *ngIf="notesForm.get('body').errors?.pattern">Special characters not allowed</div>
                     </div>
                 </div>
             </div>
