--- a/src/app/inventory/interaction-assignment/interaction-assignment.component.html
+++ b/src/app/inventory/interaction-assignment/interaction-assignment.component.html
@@ -212,9 +212,9 @@
                 <td class="table-column-350" mat-cell *matCellDef="let row"> {{row.subcategoryName}}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="problemreported1">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header> Problem Reported</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemReported}}
+            <ng-container matColumnDef="problemreported">
+                <th class="table-column-400" mat-header-cell *matHeaderCellDef mat-sort-header> Problem Reported</th>
+                <td class="table-column-400" mat-cell *matCellDef="let row"><span class="pdiv">{{row.problemReported}}</span> 
                 </td>
             </ng-container>
             <ng-container matColumnDef="docketno">
