--- a/src/app/email-template/email-template-manage/email-template-manage.component.html
+++ b/src/app/email-template/email-template-manage/email-template-manage.component.html
@@ -53,6 +53,7 @@
           <div class="text-danger" *ngIf="emailTemplateForm.get('body').errors?.required">
             {{'BODY_IS_REQUIRED' | translate }}
           </div>
+          <div class="text-danger" *ngIf="emailTemplateForm.get('body').errors?.pattern">Special characters not allowed</div>
         </div>
       </div>
     </div>
