--- a/src/app/inventory/advance-search/advance-search.component.html
+++ b/src/app/inventory/advance-search/advance-search.component.html
@@ -14,7 +14,7 @@
 </div>
 <div class="p-2">
     <div class="row">
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
             <div class="form-group">
                 <mat-label for="fromDate">{{'FROM_DATE' | translate}} </mat-label>
                 <input class="form-control" [max]="currentDate" [(ngModel)]="fromDate" [owlDateTimeTrigger]="fromDate1"
@@ -29,7 +29,7 @@
                     [owlDateTimeTrigger]="toDate1" [owlDateTime]="toDate1" placeholder="{{'TO_DATE' | translate}}">
                 <owl-date-time [pickerType]="'calendar'" #toDate1></owl-date-time>
             </div>
-        </div>
+        </div> -->
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Type </mat-label>
