--- a/src/app/inventory/interaction-assignment/interaction-assignment.component.scss
+++ b/src/app/inventory/interaction-assignment/interaction-assignment.component.scss
@@ -5,3 +5,9 @@
 .button-margin {
     margin-top: 20px;
   }
+.pdiv{
+    display: block;
+    padding: 4px 2px;
+    max-height: 100px;
+    overflow: auto;
+}
