--- a/src/app/inventory/interaction-email-old/interaction-email-old.component.html
+++ b/src/app/inventory/interaction-email-old/interaction-email-old.component.html
@@ -1,4 +1,4 @@
-<div class="page-header-main">
+<!-- <div class="page-header-main">
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto col">
             <div class="content-header">
@@ -6,7 +6,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <div class="table-responsive">
     <table [dir]="langDir" mat-table [dataSource]="emailList" multiTemplateDataRows
         class="table table-bordered table-hover table_height">
