--- a/src/app/inventory/interaction-email/interaction-email.component.html
+++ b/src/app/inventory/interaction-email/interaction-email.component.html
@@ -7,6 +7,9 @@
         </div>
     </div>
 </div>
+<div class="loading-shade" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
 <div class="table-responsive">
     <table [dir]="langDir" mat-table [dataSource]="emailList" multiTemplateDataRows
         class="table table-bordered table-hover table_height">
